
	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented intermediate pre and post sync
	* refactored interfacing soundcard to do intermediate post sync
	* refactored interfacing sequencer to do intermediate pre sync
	* refactored ags_devout.c tightened the code and intermediate post sync
	* refactored ags_midiin.c intermediate pre sync
	* improved XPath doing lv2 turtle

ags (0.7.121)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed Makefile.am to use -p and -m 644 parameter

ags (0.7.120)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved Makefile.am use install instead of cp

ags (0.7.119)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_export_window_reload_soundcard_editor()
	* implemented AgsExportSoundcard UI
	* refactored AgsExportWindow to allow export multiple soundcards
	* improved mutices in ags_record_midi_audio_run.c
	* improved mutices in ags_route_dssi_audio_run.c
	* improved mutices in ags_route_lv2_audio_run.c
	* fixed ags-audio.h to remove unused headers
	* fixed AgsSoundcardEditor and AgsSequencerEditor to remove JACK device

ags (0.7.118)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed API reference removed unused objects
	* added COPYING.docs

ags (0.7.117)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsAudio:midi-channel
	* implemented midi channel in AgsMidiDialog
	* implemented using midi channel in ags-record-midi
	* back-ported properties of tasks of branch 1.0
	* fixed ags-record-midi recall to proper key-on and key-off

ags (0.7.116)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_midiin_alsa_poll() and ags_midiin_oss_poll()
	* fixed possible NULL pointer access in ags_midiin_list_cards()
	* fixed AgsMidiin to always set nth_buffer during record
	* fixed in ags_midiin_set_device() to duplicate string and handle OSS4

ags (0.7.115)
