@@ -231,7 +231,7 @@ void
 ags_start_sequencer_finalize(GObject *gobject)
 {
   AgsAudioLoop *audio_loop;
-  AgsSequencerThread *sequencer_thread;
+  AgsThread *sequencer_thread;
 
   AgsApplicationContext *application_context;
   AgsSequencer *sequencer;
@@ -239,15 +239,15 @@ ags_start_sequencer_finalize(GObject *gobject)
   application_context = AGS_START_SEQUENCER(gobject)->application_context;
   audio_loop = AGS_AUDIO_LOOP(application_context->main_loop);
 
-  sequencer_thread = (AgsSequencerThread *) ags_thread_find_type((AgsThread *) audio_loop,
-								 AGS_TYPE_SEQUENCER_THREAD);
+  sequencer_thread = ags_thread_find_type((AgsThread *) audio_loop,
+					  AGS_TYPE_SEQUENCER_THREAD);
 
   while((sequencer_thread = ags_thread_find_type(sequencer_thread,
 						 AGS_TYPE_SEQUENCER_THREAD)) != NULL){
-    if(sequencer_thread->error != NULL){
-      g_error_free(sequencer_thread->error);
+    if(AGS_SEQUENCER_THREAD(sequencer_thread)->error != NULL){
+      g_error_free(AGS_SEQUENCER_THREAD(sequencer_thread)->error);
       
-      sequencer_thread->error = NULL;
+      AGS_SEQUENCER_THREAD(sequencer_thread)->error = NULL;
     }
 
     sequencer_thread = g_atomic_pointer_get(&(sequencer_thread->next));    
